# seabot

./: .gitignore  README.md  synchro.sh  transfert_imu.sh  transfert_launch.sh  transfert_mission.sh
src/gnss_neom8l_driver/: CMakeLists.txt  package.xml
src/gnss_neom8l_driver/include/: neom8l.h
src/gnss_neom8l_driver/launch/: gnss_neom8l.launch
src/gnss_neom8l_driver/msg/: PoseCartesian.msg
src/gnss_neom8l_driver/src/: main.cpp  neom8l.cpp
src/pressure_bme280_driver/: CMakeLists.txt  package.xml
src/pressure_bme280_driver/include/: bme280_defs.h
src/pressure_bme280_driver/launch/: pressure_bme280.launch
src/pressure_bme280_driver/msg/: Bme280Data.msg
src/pressure_bme280_driver/src/: bme280.c  main.cpp
src/seabot/: CMakeLists.txt  package.xml
src/seabot/diagnostic/: seabot_analyzers.yaml
src/seabot/launch/: base.launch  calibration_depth.launch  calibration_equilibrium.launch  calibration_piston_motor.launch  calibration_sinus.launch  calibration_up_down.launch  driver.launch  filter.launch  iridium.launch  kalman.launch  mission.launch  regulation.launch  safety.launch  script_regulation.launch  seabot.launch  seabot_base.launch  seabot_calibration.launch  seabot_driver.launch  seabot_pression.launch  seabot_regulation.launch  seabot_sinus.launch  seabot_up_down.launch  test_bassin.launch  test_iridium.launch  test_max_depth.launch  test_sinus.launch  test_up_down.launch
src/seabot/launch/test/: calibration_equilibrium.launch  test_iridium.launch  test_max_depth.launch
src/seabot/mission/: mission_0h45m_remontee_o.xml  mission_depth_only.xml  mission_empty.xml  mission_guerledan.xml  mission_guerledan2.xml  mission_guerledan3.xml  mission_test.xml  mission_test_depth.xml  mission_waypoint_only.xml
src/seabot/param/: config_default.yaml  config_seabot1.yaml  config_seabot2.yaml  config_seabot3.yaml
src/seabot/script/: calibration_acc.py  calibration_equilibrium.py  calibration_gyro.py  calibration_piston.py  calibration_piston_motor.py  calibration_pression.py  regulation_depth.py  test_depth.py  up_down_piston.py
src/seabot_depth_controller/: CMakeLists.txt  package.xml
src/seabot_depth_controller/src/: state_feedback.cpp
src/seabot_depth_regulation/: CMakeLists.txt  package.xml
src/seabot_depth_regulation/launch/: seabot_regulation.launch
src/seabot_depth_regulation/msg/: RegulationDebug.msg  RegulationDebug2.msg  RegulationDebug3.msg
src/seabot_depth_regulation/script/: piston_sinus.py  regulation_script.py  regulation_talker.py  up_down_piston.py
src/seabot_depth_regulation/src/: sliding.cpp  sliding2.cpp  state_feedback.cpp
src/seabot_depth_regulation/srv/: DepthPoint.srv
src/seabot_driver/gpsd_client/: CMakeLists.txt  package.xml
src/seabot_driver/gpsd_client/include/: gpsdclient.h
src/seabot_driver/gpsd_client/msg/: GPSFix.msg  GPSStatus.msg
src/seabot_driver/gpsd_client/src/: client.cpp  gpsdclient.cpp
src/seabot_driver/seabot_piston_driver/: CMakeLists.txt  package.xml
src/seabot_driver/seabot_piston_driver/include/: piston.h
src/seabot_driver/seabot_piston_driver/launch/: piston_driver.launch
src/seabot_driver/seabot_piston_driver/msg/: PistonDistanceTravelled.msg  PistonPosition.msg  PistonSpeedDebug.msg  PistonState.msg  RegulationLoopDuration.msg
src/seabot_driver/seabot_piston_driver/script/: check_pulse_switch_halfway.py  piston_sinus.py  test_piston.py  test_piston_dive_and_surface.py  up_down_piston.py
src/seabot_driver/seabot_piston_driver/src/: main.cpp  piston.cpp
src/seabot_driver/seabot_piston_driver/srv/: PistonErrorInterval.srv
src/seabot_driver/seabot_thruster_driver/: CMakeLists.txt  package.xml
src/seabot_driver/seabot_thruster_driver/include/: thruster.h
src/seabot_driver/seabot_thruster_driver/launch/: thruster_driver.launch
src/seabot_driver/seabot_thruster_driver/msg/: Engine.msg
src/seabot_driver/seabot_thruster_driver/src/: main.cpp  thruster.cpp
src/seabot_fusion/: CMakeLists.txt  package.xml
src/seabot_fusion/launch/: depth_filter.launch  filter.launch  kalman.launch  lambert.launch
src/seabot_fusion/msg/: DepthPose.msg  GnssPose.msg  InternalPose.msg  Kalman.msg  TemperatureFusion.msg
src/seabot_fusion/src/: batteries_filter.cpp  depth_filter.cpp  internal_sensor_filter.cpp  kalman.cpp  kalman_old.cpp  lambert.cpp  temperature_filter.cpp
src/seabot_iridium/: CMakeLists.txt  package.xml
src/seabot_iridium/TIS/inc/: TIS_at.h  TIS_gps.h  tis.h
src/seabot_iridium/TIS/include/: TIS_at.h  TIS_errors.h  TIS_modems.h  TIS_platforms.h  TIS_rudics.h  TIS_sbd.h  (+1 more)
src/seabot_iridium/include/: iridium.h  logData.h  logtdt.h  missionxml.h  sbd.h
src/seabot_iridium/launch/: iridium.launch
src/seabot_iridium/msg/: IridiumLog.msg  IridiumSession.msg  IridiumStatus.msg
src/seabot_iridium/src/: TimeoutSerial.cpp  decode_log_state.cpp  generate_cmd_parameters.cpp  generate_cmd_sleep.cpp  iridium.cpp  logData.cpp  logtdt.cpp  main.cpp  missionxml.cpp  sbd.cpp  tdt.cpp  test.cpp  test_decode_log_state.cpp  test_decode_mission.cpp  test_generate_log_state.cpp
src/seabot_log/: CMakeLists.txt  package.xml
src/seabot_log/src/: log_analyzer.cpp  log_kalman.cpp  log_state_space.cpp  realtime_depth_data.cpp
src/seabot_mission/: CMakeLists.txt  package.xml
src/seabot_mission/include/: seabotmission.h
src/seabot_mission/launch/: mission.launch
src/seabot_mission/msg/: Waypoint.msg
src/seabot_mission/src/: mission.cpp  seabotmission.cpp  waypoints.cpp
src/seabot_mission/srv/: MissionEnable.srv
src/seabot_waypoint_regulation/: CMakeLists.txt  package.xml
src/seabot_waypoint_regulation/launch/: heading.launch
src/seabot_waypoint_regulation/msg/: HeadingDebug.msg  WaypointDebug.msg
src/seabot_waypoint_regulation/src/: heading.cpp  waypoint.cpp
src/thruster_driver/: CMakeLists.txt  package.xml
src/thruster_driver/include/: thruster.h
src/thruster_driver/launch/: thruster_driver.launch
src/thruster_driver/msg/: Engine.msg  Velocity.msg
src/thruster_driver/src/: main.cpp  thruster.cpp
tools/ceres_test/: CMakeLists.txt
tools/ceres_test/src/: main.cpp
(+343 files in other folders)
