<?xml version="1.0"?>
<package format="2">
  <name>pressure_bme280_driver</name>
  <version>0.0.0</version>
  <description>The pressure_bme280_driver package</description>

   <maintainer email="thomas.le_mezo@ensta-bretagne.org">Thomas Le Mézo</maintainer>
  <!-- <url type="website">http://wiki.ros.org/pressure_89bsd_driver</url> -->

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
</package>
