<?xml version="1.0"?>
<package format="2">
  <name>seabot</name>
  <version>0.0.0</version>
  <description>The seabot package</description>
<maintainer email="thomas.le_mezo@ensta-bretagne.org">Thomas Le Mézo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>rospy</depend>
  <!-- <depend>roscpp</depend> -->
  <!-- <depend>sensor_msgs</depend> -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
</package>