<?xml version="1.0"?>
<package format="2">
  <name>seabot_depth_regulation</name>
  <version>0.0.0</version>
  <description>The seabot regulation package</description>

   <maintainer email="thomas.le_mezo@ensta-bretagne.org">Thomas Le Mézo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>rospy</depend>
   <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <depend>seabot_fusion</depend>
  <depend>pressure_bme280_driver</depend>
</package>
