<?xml version="1.0"?>
<package format="2">
  <name>seabot_mission</name>
  <version>0.0.0</version>
  <description>The Seabot Mission package</description>

  <maintainer email="thomas.le_mezo@ensta-bretagne.org">Thomas Le Mézo</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <depend>seabot_depth_controller</depend>
  <depend>seabot_power_driver</depend>
</package>
