<?xml version="1.0"?>
<package format="2">
  <name>seabot_waypoint_regulation</name>
  <version>0.0.0</version>
  <description>The seabot_waypoint_regulation package</description>

   <maintainer email="thomas.le_mezo@ensta-bretagne.org">Thomas Le Mézo</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  
<!--  <depend>rospy</depend>-->
   <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>message_runtime</depend>
  <depend>seabot_mission</depend>
  <depend>gpsd_client</depend>
  <depend>seabot_fusion</depend>
  <depend>seabot_thruster_driver</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
