<?xml version="1.0"?>
<package format="2">
  <name>gpsd_client</name>
  <version>0.3.0</version>
  <description>connects to a GPSd server and broadcasts GPS fixes 
   using the NavSatFix message (fork version)</description>

  <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Roehling</maintainer>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <author email="ken@tossell.net">Ken Tossell</author>
  <author email="rob@umd.edu">Rob Thomson</author>

  <author email="thomas.le_mezo@ensta-bretagne.org">Thomas Le Mezo</author>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/gpsd_client</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>pkg-config</depend>
  <depend>libgps</depend>
  <depend>message_runtime</depend>

</package>
